--- a/connectors/package.json
+++ b/connectors/package.json
@@ -43,6 +43,7 @@
     "pino": "^8.11.0",
     "pino-pretty": "^10.0.0",
     "sequelize": "^6.31.0",
+    "tiktoken": "^1.0.8",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
